Fix stacking problem for demo/source and tech tags in works section on small mobile sizes. https://github.com/deduced/bov-personal-portfolio/issues/24
* Increase width of .l-container__repo-link-group to 88%

--- a/src/stylesheets/layout/_common.scss
+++ b/src/stylesheets/layout/_common.scss
@@ -8,7 +8,7 @@
   }
 
   &__repo-link-group {
-    width: 75%;
+    width: 88%;
     max-width: 390px;
     margin: 40px 0;
   }
